# ida-lifter

./: CMakeLists.txt  Makefile  README.md  codes.txt  ida-plugin.json  ida_dump.cpp
.github/workflows/: build.yml
ida-cmake/: idasdkConfig.cmake
ida-cmake/cmake/: platform.cmake
src/avx/: avx_debug.cpp  avx_debug.h  avx_helpers.cpp  avx_helpers.h  avx_intrinsic.cpp  avx_intrinsic.h  avx_lifter.cpp  avx_types.cpp  avx_types.h  avx_utils.cpp  avx_utils.h  conversions.h
src/avx/handlers/: avx_handlers.h  handler_cvt.cpp  handler_logic.cpp  handler_math.cpp  handler_mov.cpp
src/inline/: inline_component.cpp  inline_component.h
src/plugin/: component_registry.cpp  component_registry.h  lifter_plugin.cpp
src/vmx/: vmx_lifter.cpp
suite/: Makefile  intr_avx.c  intr_avx2.c  main.c
test/: .gitignore  CMakeLists.txt  Makefile  README.md  avx2_ops.c  avx_demo.cpp  avx_demo_reconst.cpp  avx_ops.c  avx_test.h  main.c
test/experimental/avx10/: Makefile  avx10_missing_asm.txt  avx10_missing_asm_latest.txt  avx512_avx10_comprehensive.c
test/integration/: common.h  main.c  test_scalar.c
test/integration/sources/: avx_comprehensive_ops.c  test_avx512_addps.c  test_avx512_mem_addps.c
test/physics/src/: bullet.c  common.h  fluid.c  interplanetary.c  main.c  shooter_main.c
test/sc-replication-1/: Makefile  avx_lifter_test.c
test/sc-replication-2/: 140550ff0.c  140550ff0.s
test/shooter/: CMakeLists.txt  wasm_shell.html
test/shooter/include/: config.h  types.h
test/shooter/include/ai/: behavior_tree.h  enemy_ai.h  player_ai.h
test/shooter/include/combat/: bullet.h
test/shooter/include/core/: rng.h
test/shooter/include/entity/: entity.h
test/shooter/include/game/: game.h
test/shooter/include/level/: level.h
test/shooter/include/math/: avx_ai_math.h  avx_math.h  sse_math.h
test/shooter/include/physics/: physics.h
test/shooter/include/render/: render.h
test/shooter/src/: main.c
test/shooter/src/ai/: enemy_ai.c  enemy_ai_advanced.c  player_ai.c  player_ai_advanced.c
test/shooter/src/combat/: bullet.c
test/shooter/src/core/: game.c
test/shooter/src/entity/: entity.c
test/shooter/src/level/: level.c
test/shooter/src/physics/: physics.c
test/shooter/src/render/: render.c
test/shooter/wasm_build/: index.html  shooter.js  shooter.wasm
test/torture/: .gitignore  Makefile  README.md  allowlist_nomem.txt  coverage_closure.py  gen_memfold.py  memfold_forms.tsv  run_torture.py  torture_matrix.py
test/unit/: common.h
test/unit/sources/: test_avx512_addps.c  test_avx512_mask_addps.c  test_avx512_maskz_addps.c  test_defs.h  test_mask_add_ps_ymm.c  test_mask_and_ps_ymm.c  test_mask_compress_epi16_zmm.c  test_mask_compress_epi32_zmm.c  test_mask_compress_epi8_zmm.c  test_mask_compressstore_epi32_zmm.c  test_mask_compressstore_ps_zmm.c  test_mask_conflict_epi32_zmm.c  test_mask_expandload_epi32_zmm.c  test_mask_expandload_ps_zmm.c  test_mask_fmadd_ps_ymm.c  test_mask_fmadd_ps_zmm.c  test_mask_fmaddsub_ps_zmm.c  test_mask_i32gather_ps_zmm.c  test_mask_i32scatter_ps_zmm.c  test_mask_i64gather_epi64_zmm.c  test_mask_i64gather_pd_zmm.c  test_mask_i64gather_ps_ymm.c  test_mask_i64scatter_epi64_zmm.c  test_mask_i64scatter_pd_zmm.c  test_mask_i64scatter_ps_ymm.c  test_mask_permutex2var_epi32_zmm.c  test_mask_permutexvar_epi8_zmm.c  test_mask_ternarylogic_epi32_zmm.c  test_maskz_add_ps_ymm.c  test_maskz_expand_epi16_zmm.c  test_maskz_expand_epi32_zmm.c  test_maskz_expand_epi8_zmm.c  test_maskz_expandload_ps_zmm.c  test_maskz_fmadd_ps_ymm.c  test_maskz_fmadd_ps_zmm.c  test_maskz_fmaddsub_ps_zmm.c  test_vaddps.c  test_vandnps.c  test_vandps.c  test_vblend_ps_0xAA.c  (+67 more)
test/unit/stubs/: stub_cvt_dq2ps.c  stub_cvt_ps2dq.c  stub_int_unary.c  stub_ps128_binary.c  stub_ps_permvar.c  stub_ps_ternary.c  stub_ymm_mask_binary.c  stub_ymm_mask_fma.c  stub_ymm_mask_gather_ps.c  stub_ymm_mask_scatter_ps.c  stub_ymm_maskz_binary.c  stub_ymm_maskz_fma.c  stub_zmm_mask_compress_epi16.c  stub_zmm_mask_compress_epi32.c  stub_zmm_mask_compress_epi8.c  stub_zmm_mask_compress_ps.c  stub_zmm_mask_compressstore_epi32.c  stub_zmm_mask_expand_ps.c  stub_zmm_mask_expandload_epi32.c  stub_zmm_mask_fma.c  stub_zmm_mask_gather_epi64.c  stub_zmm_mask_gather_pd.c  stub_zmm_mask_gather_ps.c  stub_zmm_mask_int_binary.c  stub_zmm_mask_int_permutex2.c  stub_zmm_mask_int_ternary.c  stub_zmm_mask_int_unary.c  stub_zmm_mask_scatter_epi64.c  stub_zmm_mask_scatter_pd.c  stub_zmm_mask_scatter_ps.c  stub_zmm_maskz_binary.c  stub_zmm_maskz_expand_epi16.c  stub_zmm_maskz_expand_epi32.c  stub_zmm_maskz_expand_epi8.c  stub_zmm_maskz_expand_ps.c  stub_zmm_maskz_fma.c
tests/: Makefile  avx_comprehensive_test.c  test_scalar.c
tests/stubs/: stub_int_binary.c  stub_ps_binary.c  stub_ps_unary.c  stub_zmm_binary.c  stub_zmm_mask_binary.c
tests/tests/: test_avx512_addps.c  test_avx512_mask_addps.c  test_avx512_maskz_addps.c  test_vaddps.c  test_vandnps.c  test_vandps.c  test_vblend_ps_0xAA.c  test_vcmpps_eq.c  test_vcmpps_le.c  test_vcmpps_lt.c  test_vcmpps_neq.c  test_vcvtdq2ps.c  test_vcvtps2dq.c  test_vdivps.c  test_vfmadd231ps.c  test_vhaddps.c  test_vhsubps.c  test_vmaxps.c  test_vminps.c  test_vmulps.c  test_vorps.c  test_vpabsd.c  test_vpaddb.c  test_vpaddd.c  test_vpaddq.c  test_vpadds_b.c  test_vpadds_w.c  test_vpaddw.c  test_vpalignr_imm.c  test_vpand.c  test_vpandn.c  test_vpblendd_imm.c  test_vpcmpeqb.c  test_vpcmpeqd.c  test_vpcmpeqq.c  test_vpcmpgtb.c  test_vpcmpgtd.c  test_vpcmpgtq.c  test_vperm2i128_imm.c  test_vpermd.c  (+32 more)
